# text-to-pptx-app

./: .gitignore  .~lock.generated.pptx#  AGENTS.md  LICENSE  README.md  Text to pptx generator.md  pyproject.toml  requirements.txt
app/: main.py
app/engine/: llm_router.py  outline.py  slide_builder.py  template_assets.py
static/: app.js  styles.css
templates/: index.html
